<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.login_and_registration.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_login">

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="70sp"
            android:textStyle="bold|italic"
            android:elevation="100dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <LinearLayout
            android:id="@+id/dataLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTextView">



            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:background="@drawable/custom_buttons"
                android:backgroundTint="@color/colorPrimaryText"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:elevation="50dp"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/colorPrimaryText"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="10dp"
                android:elevation="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="24sp"
                tools:ignore="Autofill" />

        </LinearLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/custom_buttons"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:elevation="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataLayout" />

        <Button
            android:id="@+id/not_a_member_sign_up_now"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>